song selector in weird state

--- a/src/components/Editor.module.css
+++ b/src/components/Editor.module.css
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
 }
 
-#cover {
+.cover {
     width: 100vw;
     max-width: 640px;
     /* height: 100vw; */
@@ -17,5 +17,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 1px dotted black;
+    border: 1px dashed black;
+}
+
+.hidden {
+    display: none;
 }
