--- a/src/components/Editor.module.css
+++ b/src/components/Editor.module.css
@@ -62,6 +62,7 @@
     font-size: var(--fs-1);
     border-radius: 40px 20px;
     padding-left: 0.6em;
+    height: 1.3em;
 }
 
 @media (min-width: 600px) {
