--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -5,7 +5,16 @@
     /* align-items: center; */
     /* justify-content: center; */
 }
-
+.buttonContainer > label {
+    font-size: var(--fs-1);
+    color: var(--bg-color);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 .button {
     text-align: left;
     background-color: var(--text-color);
