--- a/src/components/Editor.module.css
+++ b/src/components/Editor.module.css
@@ -1,9 +1,11 @@
 .Editor {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     width: 100%;
     max-width: 1300px;
     justify-content: space-between;
+    align-items: center;
     gap: 1em;
 }
 
@@ -54,7 +56,7 @@
     border-radius: 5%;
 }
 
-.button {
+/* .button {
     text-align: left;
     background-color: var(--text-color);
     color: var(--bg-color);
@@ -63,10 +65,14 @@
     border-radius: 40px 20px;
     padding-left: 0.6em;
     height: 1.3em;
-}
+} */
 
-@media (min-width: 600px) {
+@media (min-width: 1200px) {
     .canvasContainer {
         order: 1;
+    }
+    .Editor {
+        flex-direction: row;
+        align-items: stretch;
     }
 }
